Add failing test
url paths seem to be resolved to absolute filesystem paths when they appear in the root less file -- that is, `url(box.png)` becomes `url(/path/to/less-loader/test/less/box.png)` when compiled.

--- a/test/less/basic.less
+++ b/test/less/basic.less
@@ -11,4 +11,5 @@
   color: saturate(@base, 5%);
   border-color: lighten(@base, 30%);
   div { .box-shadow(0 0 5px, 30%) }
+  background: url(box.png);
 }
