--- a/test/css/imports.css
+++ b/test/css/imports.css
@@ -4,6 +4,7 @@
 .box {
   color: #fe33ac;
   border-color: #fdcdea;
+  background: url(box.png);
 }
 .box div {
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
