Added tests for different types of css imports into less

--- a/test/css/imports.css
+++ b/test/css/imports.css
@@ -1,5 +1,11 @@
+@import "css.css";
+@import "css.css";
 #it-works {
   color: hotpink;
+}
+.classical-css,
+#it-works {
+  background: hotpink;
 }
 .box {
   color: #fe33ac;
