--- a/test/less/imports.less
+++ b/test/less/imports.less
@@ -1,6 +1,10 @@
 @import (reference) "~some/module";
+@import "css.css";
+@import (css) "css.css";
+@import (less) "css.css";
+@import (inline) "css.css";
 @import "basic";
 
-#it-works:extend(.some-module) {
+#it-works:extend(.some-module, .classical-css) {
   margin: 10px;
 }
