--- a/test/css/imports.css
+++ b/test/css/imports.css
@@ -1,7 +1,12 @@
+@import "~some/css.css";
+@import "~some/css.css";
 @import "css.css";
 @import "css.css";
 #it-works {
   color: hotpink;
+}
+.another-classical-css {
+  background: hotpink;
 }
 .classical-css,
 #it-works {
