--- a/test/less/imports.less
+++ b/test/less/imports.less
@@ -1,4 +1,8 @@
 @import (reference) "~some/module";
+@import "~some/css.css";
+@import (css) "~some/css.css";
+@import (less) "~some/css.css";
+@import (inline) "~some/css.css";
 @import "css.css";
 @import (css) "css.css";
 @import (less) "css.css";
