Added script which generates the reference css files for us

--- a/test/less/folder/img.less
+++ b/test/less/folder/img.less
@@ -1,6 +1,6 @@
 .img {
-  background: url(some/img.jpg)
+  background: url(some/img.jpg);
 }
 .img2 {
-  background: url(../img.jpg)
+  background: url(../img.jpg);
 }
