--- a/test/less/imports-node.less
+++ b/test/less/imports-node.less
@@ -7,6 +7,6 @@
 // Add bootstrap as sufficient complex and popular example
 @import "~bootstrap/less/bootstrap.less";
 
-#it-works:extend(.modules-dir-some-module, .modules-dir-some-module) {
+#it-works:extend(.modules-dir-some-module) {
   margin: 10px;
 }
