--- a/test/css/imports-url.css
+++ b/test/css/imports-url.css
@@ -1,1 +1,3 @@
 @import url("http://fonts.googleapis.com/css?family=Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
+@import url("//fonts.googleapis.com/css?family=Roboto:300,400,500");
