--- a/test/fixtures/less/source-map.less
+++ b/test/fixtures/less/source-map.less
@@ -1,5 +1,4 @@
-// Should usually be imported with '~' but since our test setup for this is complicated, we don't use it here
-@import "../node_modules/some/module";
+@import "~some/module";
 
 #it-works:extend(.modules-dir-some-module) {
   margin: 10px;
