Simplify url-path tests

--- a/test/fixtures/less/folder/url-path.less
+++ b/test/fixtures/less/folder/url-path.less
@@ -1,1 +1,9 @@
-@import "../img";
+.img4 {
+  background: url(img.jpg);
+}
+.img5 {
+  background: url(some/img.jpg);
+}
+.img6 {
+  background: url(../img.jpg);
+}
