--- a/test/fixtures/less/url-path.less
+++ b/test/fixtures/less/url-path.less
@@ -1,1 +1,11 @@
-@import "folder/img";
+@import "folder/url-path";
+
+.img1 {
+  background: url(img.jpg);
+}
+.img2 {
+  background: url(some/img.jpg);
+}
+.img3 {
+  background: url(../img.jpg);
+}
