--- a/test/fixtures/less/import-url.less
+++ b/test/fixtures/less/import-url.less
@@ -1,3 +1,3 @@
-@import url("http://fonts.googleapis.com/css?family=Roboto:300,400,500");
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
-@import url("//fonts.googleapis.com/css?family=Roboto:300,400,500");
+@import (css) url("http://fonts.googleapis.com/css?family=Roboto:300,400,500");
+@import (css) url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
+@import (css) url("//fonts.googleapis.com/css?family=Roboto:300,400,500");
