test: import files hosted remotely

--- a/test/fixtures/less/import-keyword-url.less
+++ b/test/fixtures/less/import-keyword-url.less
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
 @import (inline) url("https://fonts.googleapis.com/css?family=Roboto:300");
 @import (less) url("https://fonts.googleapis.com/css?family=Roboto:400");
 @import (once) url("https://fonts.googleapis.com/css?family=Roboto:500");
