feat: `paths` now works with webpack resolver

--- a/test/fixtures/import-webpack-aliases.less
+++ b/test/fixtures/import-webpack-aliases.less
@@ -1,6 +1,6 @@
 @import "~fileAlias";
-@import "~assets/folder/url-path.less";
-@import "assets/folder/url-path.less";
+@import "~assets/basic.less";
+@import "assets/basic.less";
 
 body {
   background: url(assets/resources/circle.svg);
