--- a/test/fixtures/file-load.less
+++ b/test/fixtures/file-load.less
@@ -1,3 +1,3 @@
 @import "forFileLoaderPluginResolve.less";
 @import (once) url("https://fonts.googleapis.com/css?family=Roboto:500");
-@import "~@scope/module";
+@import "@scope/module";
