--- a/test/fixtures/import-webpack.less
+++ b/test/fixtures/import-webpack.less
@@ -1,8 +1,8 @@
-@import (reference) "~some/module";
-@import "~some/css.css";
-@import (css) "~some/css.css";
-@import (less) "~some/css.css";
-@import (inline) "~some/css.css";
+@import (reference) "some/module";
+@import "some/css.css";
+@import (css) "some/css.css";
+@import (less) "some/css.css";
+@import (inline) "some/css.css";
 
 #it-works:extend(.modules-dir-some-module) {
   margin: 10px;
