--- a/test/fixtures/import-webpack.less
+++ b/test/fixtures/import-webpack.less
@@ -1,7 +1,7 @@
-@import (reference) "some/module";
+@import (reference) "~some/module";
 @import "some/css.css";
 @import (css) "some/css.css";
-@import (less) "some/css.css";
+@import (less) "~some/css.css";
 @import (inline) "some/css.css";
 
 #it-works:extend(.modules-dir-some-module) {
