refactor: drop webpack@4 (#402)
BREAKING CHANGE: minimum supported `webpack` version is `5`

--- a/test/fixtures/import-webpack-aliases.less
+++ b/test/fixtures/import-webpack-aliases.less
@@ -1,5 +1,5 @@
 @import "~fileAlias";
-@import "~assets/basic.less";
+@import "assets/basic.less";
 @import "assets/basic.less";
 
 body {
@@ -7,5 +7,5 @@ body {
 }
 
 .abs {
-  background: url(~assets/resources/circle.svg);
+  background: url(assets/resources/circle.svg);
 }
