--- a/test/fixtures/error-mixed-resolvers.less
+++ b/test/fixtures/error-mixed-resolvers.less
@@ -1,3 +1,3 @@
-// You can't use include paths and webpack's resolver simulatenously.
+// You can't use include paths and webpack's resolver simultaneously.
 @import "some/module.less";
 @import "~some/module.less";
